--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,32 @@
   <head>
     <title>BlogApp</title>
     <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+
+    <div class="container">
+      <header class="header">
+        <nav>
+          <ul class="menu clearfix">
+              <li><a href="/blogs/top">Top</a></li>
+              <li><a href="/blogs">Blog List</a></li>
+              <li><a href="blogs/new">Create New</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <%= yield %>
+
+      <footer class="footer">
+        <p>Copyright © ️︎2018 Yoko Hashimoto</p>
+      </footer>
+
+    </div>
   </body>
 </html>
