--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -11,13 +11,20 @@ body {
 	text-align: center;
 }
 
-.container {
-	widows: 100%;
+div.container {
+  width: 100%;
 	height: 100%;
 	padding-bottom: 60px;
 	text-align: center;
-	margin: auto;
+  margin: auto;
+  padding: 0p;
 }
+
+.header_wrapper {
+  width: 100%;
+}
+
+
 
 .header {
     width: 100%;
@@ -29,7 +36,13 @@ body {
 		font-size: 1.8rem;
 		line-height: 1.5;
 		top: 0px;
-		left: 0px;
+    left: 0px;
+    
+
+    width: 1419px; /* ヘッダー 幅を指定*/
+    margin:0 auto;
+
+
 	}
   
   ul {
@@ -57,6 +70,7 @@ body {
     display: block;
     clear: both;
   }
+
   
   .footer {
     width: 100%;
