--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BlogApp</title>
+    <title> My Blog</title>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -12,8 +12,9 @@
 
   <body>
 
-    <div class="container">
-      <header class="header">
+    
+
+      <%# <header class="header">
         <nav>
           <ul class="menu clearfix">
               <li><a href="/blogs/top">Top</a></li>
@@ -21,7 +22,31 @@
               <li><a href="blogs/new">Create New</a></li>
           </ul>
         </nav>
-      </header>
+      </header> %>
+    
+　    <div class="container">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
+              <span class="sr-only">Bootstrap</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/blogs/top">My blog</a>
+          </div>
+          <div id="gnavi" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="/blogs/top">Top</a></li>
+              <li><a href="/blogs">Blog List</a></li>
+              <li><a href="/blogs/new">Create New</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+
 
       <%= yield %>
 
