--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,10 @@
         </nav>
       </header> %>
     
-　    <div class="container">
+　    
+
+    <header class="header>">
+
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -45,8 +48,10 @@
           </div>
         </div>
       </nav>
+    </header>
 
-
+      <%# <div class="container">
+      </div> %>
 
       <%= yield %>
 
@@ -54,6 +59,6 @@
         <p>Copyright © ️︎2018 Yoko Hashimoto</p>
       </footer>
 
-    </div>
+    
   </body>
 </html>
