--- a/app/assets/stylesheets/blog_app_overrides.css
+++ b/app/assets/stylesheets/blog_app_overrides.css
@@ -1,4 +1,9 @@
 .navbar-default {
     background-color: #2c3e50;
-    border-color: none;
+    /* border-color: none; */
+    color: #fff;
+    border: none;
 }
+
+/* .btn-default{
+} */
