--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -20,28 +20,25 @@ div.container {
   padding: 0p;
 }
 
-.header_wrapper {
-  width: 100%;
-}
-
+// .header_wrapper {
+//   width: 100%;
+// }
 
 
 .header {
-    width: 100%;
-    background-color: #2c3e50;
-    height: 60px;
-		color: #fff;
-		top: 0;
-		left: 0;
-		font-size: 1.8rem;
-    position: fixed;
-    z-index: 100;
-
-    
-    // width: 1419px; /* ヘッダー 幅を指定*/
-    margin:0 auto;
+  width: 100%;
+  background-color: #2c3e50;
+  height: 60px;
+  color: #fff;
+  top: 0;
+  left: 0;
+  font-size: 1.8rem;
+  position: fixed;
+  z-index: 100;
 
 
+  // width: 1419px; /* ヘッダー 幅を指定*/
+  margin:0 auto;
 	}
   
   ul {
