--- a/app/assets/stylesheets/blog_app_overrides.css
+++ b/app/assets/stylesheets/blog_app_overrides.css
@@ -1,9 +1,25 @@
 .navbar-default {
     background-color: #2c3e50;
     /* border-color: none; */
-    color: #fff;
     border: none;
 }
 
+.navbar-default .navbar-brand {
+	color: #fff;
+	font-size: 2.5rem;
+	line-height: 2.5rem;
+}
+
+.navbar-default .navbar-brand:hover {
+  color: #C0C0C0;
+}
+
+.navbar-toggle {
+	background-color: #2c3e50;
+}
+
+#gnavi {
+	background-color: rgba(44, 62, 80, 0.95);
+}
 /* .btn-default{
 } */
