--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -2,37 +2,42 @@
 	margin: 0 auto;
 }
 
-// table {
-// 	margin: 0 auto;
-// 	border-collapse: collapse;
-// 	border: solid 1px black;
-// }
-
 td {
 	border:0;
 }
 
 .content {
   /* table(Hitokoto一覧)を左右中央寄せにする */
-  margin: auto;
+  margin: 0 auto;
   /* ボタンの下に線を表示させる為の処理 */
   border-collapse: collapse;
-  background-color: #F5F5F5;
+//   background-color: #F5F5F5;
   table-layout: fixed;
   width: 100%;
-	word-wrap: break-word;
-}
-
-.button_wrapper {
-	text-align: left;
+  word-wrap: break-word;
 }
 
 .delete_button {
-	text-align: right;
-	margin-right: 20px;
+	// text-align: center;
+	margin: 10px;
+	display: inline-block;
 }
 
 .edit_button {
-	text-align: left;
-	margin-left: 20px;
+	// text-align: center;
+	margin: 10px;
+	display: inline-block;
+}
+
+.post {
+	padding: 0.5em 1em;
+	// margin: 2em 0;
+	margin: 5px;
+	font-weight: bold;
+	color: #6091d3;/*文字色*/
+	background: #FFF;
+	border: solid 3px #6091d3;/*線*/
+	border-radius: 10px;/*角の丸み*/
+	color: #708090;
+	width: 450px;
 }
