--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -12,35 +12,55 @@ body {
 }
 
 div.container {
-  width: 100%;
+  // width: 100%;
 	height: 100%;
-	padding-bottom: 60px;
+	padding-bottom: 65px;
 	text-align: center;
-  margin: auto;
-  padding: 0p;
+  // margin: 0 auto;
+  // padding: 0p;
+  padding-top: 65px;
 }
 
-// .header_wrapper {
+
+// .header {
 //   width: 100%;
-// }
-
-
-.header {
+//   background-color: #2c3e50;
+//   height: 60px;
+//   color: #fff;
+//   top: 0;
+//   left: 0;
+//   font-size: 1.8rem;
+//   position: fixed;
+//   z-index: 100;
+//   // width: 1419px; /* ヘッダー 幅を指定*/
+//   margin:0 auto;
+//   }
+  
+.navbar {
   width: 100%;
-  background-color: #2c3e50;
   height: 60px;
-  color: #fff;
+  // background-color: #2c3e50;
+  // color: #fff;
   top: 0;
   left: 0;
   font-size: 1.8rem;
   position: fixed;
   z-index: 100;
+  /* デフォルトで設定されている角丸をなくす*/
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
 
+#gnavi a {
+  color: #fff;
+  line-height: 2.5rem;
+}
 
-  // width: 1419px; /* ヘッダー 幅を指定*/
-  margin:0 auto;
-	}
-  
+#gnavi a:hover {
+  color: #C0C0C0;
+}
+
   ul {
     margin: 0 auto;
 		list-style: none;
