--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -4,49 +4,35 @@
 
   <p><%= notice%></p>
  
-  <table class="content">
-    <%# <tr>
-      <th>タイトル</th>
-      <th>内容</th>
-    </tr> %>
+  <div class="content">
 
-
-    <colgroup>
-      <col>
-      <col>
-    </colgroup>
-
-    <% @blogs.each do |blog| %>
-      <tr>
-        <td colspan="2"><%= link_to blog.title, blog_path(blog.id) %> </td>
-      </tr>
-      <tr>
-        <td colspan="2"><%= blog.content %></td>
-      </tr>
-      <tr>
-        <td colspan="2"><%= blog.created_at.strftime("%Y-%m-%d %H:%M ") %></td>
-      </tr>
-      <!-- <tr><td><%= link_to '詳細',  blog_path(blog.id) %></td></tr> -->
-      <tr>
-        <div class="button_wrapper">
+    <div class="row">
+   
+      <% @blogs.each do |blog| %>
+        <div class="col-md-6 post">
+          <div>
+            <%= link_to blog.title, blog_path(blog.id) %> 
+          </div>
+          <div>
+            <%= blog.content %>
+          </div>
+          <div>
+            <%= blog.created_at.strftime("%Y-%m-%d %H:%M ") %>
+          </div>
           <div class="btn-group" role="group" aria-label="...">
-              <td>
-                <div class="delete_button">
-                  <button type="button" class="btn btn-default"><%= link_to 'delete', blog_path(blog.id), method: :delete, 
-                    data: { confirm: '本当に削除していいですか？'} %></button>
-                </div>
-              </td>
-              <td>
-                <div class="edit_button">
-                  <button type="button" class="btn btn-default"><%= link_to "edit", edit_blog_path(blog.id), 
-                    data: { confirm: '本当に編集していいですか？'} %></button>
-                </div>
-              </td>
+            <div class="delete_button">
+              <button type="button" class="btn btn-default"><%= link_to 'delete', blog_path(blog.id), method: :delete, 
+                data: { confirm: '本当に削除していいですか？'} %></button>
+            </div>
+            <div class="edit_button">
+              <button type="button" class="btn btn-default"><%= link_to "edit", edit_blog_path(blog.id), 
+                data: { confirm: '本当に編集していいですか？'} %></button>
+            </div>
           </div>
         </div>
-      </tr>
-    <% end %>
-  </table>
+      <% end %>
+    </div>
+  </div>
 
   <br>
 
