--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,6 @@
 
   <body>
 
-    
-
       <%# <header class="header">
         <nav>
           <ul class="menu clearfix">
@@ -24,10 +22,7 @@
         </nav>
       </header> %>
     
-　    
-
-    <header class="header>">
-
+    <header>
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -42,23 +37,18 @@
           <div id="gnavi" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li><a href="/blogs/top">Top</a></li>
-              <li><a href="/blogs">Blog List</a></li>
-              <li><a href="/blogs/new">Create New</a></li>
+              <li><a href="/blogs">Blog list</a></li>
+              <li><a href="/blogs/new">Create new</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-      <%# <div class="container">
-      </div> %>
+    <%= yield %>
 
-      <%= yield %>
-
-      <footer class="footer">
-        <p>Copyright © ️︎2018 Yoko Hashimoto</p>
-      </footer>
-
-    
+    <footer class="footer">
+      <p>Copyright © ️︎2018 Yoko Hashimoto</p>
+    </footer>
   </body>
 </html>
