--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,4 +4,6 @@
   
   <br>
   
-  <%= link_to "ブログ一覧画面に戻る", blogs_path %>
+  <div class="btn-group" role="group" aria-label="...">
+    <button type="button" class="btn btn-default"><%= link_to "Back", blogs_path %></button>
+  </div>
