--- a/app/views/blogs/top.html.erb
+++ b/app/views/blogs/top.html.erb
@@ -1,4 +1,9 @@
 <div class="container">
-  <h1>top画面</h1>
+  <div class="top_image">
+    <div class="back_transparent"></div>
+    <div class="top_message">
+      <h1>My blog</h1>
+      <h4>日々の出来事を140文字以内で綴ります。</h4>
+    </div>
+	</div>
 </div>
-
