--- a/app/assets/stylesheets/blog_app_overrides.css
+++ b/app/assets/stylesheets/blog_app_overrides.css
@@ -21,5 +21,16 @@
 #gnavi {
 	background-color: rgba(44, 62, 80, 0.95);
 }
-/* .btn-default{
-} */
+
+.btn-default {
+	background-color: #fff;
+	padding:5px 10px;
+  text-decoration :none;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+	transition: .3s;
+	border-radius: 5px;
+}
+
+.btn-default:hover {
+	box-shadow: 0 0 2px rgba(0,0,0,0.2);
+}
