--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -5,48 +5,28 @@ html {
 }
 
 body {
-	// width: 100%;
 	height: 100%;
-	// margin: 0 auto;
 	text-align: center;
 }
 
 div.container {
-  // width: 100%;
 	height: 100%;
-	padding-bottom: 65px;
 	text-align: center;
-  // margin: 0 auto;
-  // padding: 0p;
-  padding-top: 65px;
+  margin: 0 auto;
+  padding: 0p;
+  padding-top: 80px;
+  padding-bottom: 85px;
 }
-
-
-// .header {
-//   width: 100%;
-//   background-color: #2c3e50;
-//   height: 60px;
-//   color: #fff;
-//   top: 0;
-//   left: 0;
-//   font-size: 1.8rem;
-//   position: fixed;
-//   z-index: 100;
-//   // width: 1419px; /* ヘッダー 幅を指定*/
-//   margin:0 auto;
-//   }
   
 .navbar {
   width: 100%;
   height: 60px;
-  // background-color: #2c3e50;
-  // color: #fff;
   top: 0;
   left: 0;
   font-size: 1.8rem;
   position: fixed;
   z-index: 100;
-  /* デフォルトで設定されている角丸をなくす*/
+  /* デフォルトで設定されている角丸を無効にする*/
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
@@ -97,7 +77,7 @@ div.container {
     position: absolute;
 		bottom: 0;
 		display: table;
-		margin: 0 auto;
+		margin: 30px auto 0px  auto;
   }
 	
 	.footer p {
@@ -106,4 +86,45 @@ div.container {
     text-align: center;
     vertical-align: middle;
     display: table-cell;
+}
+
+.top_image {
+  // background-image: image-url("caffe.JPG");
+  // background-size: cover;
+  height:0;
+  /* 表示画像の高さ ÷　表示画像の幅 × 100
+  (ディスプレイのサイズに合わせて背景画像を100%で表示させる)*/
+  padding-bottom: 66.66%;
+  margin: 0;
+  text-align: left;
+  position: relative;
+
+}
+
+.back_transparent {
+  /* 背景画像の透過用css */
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: image-url("caffe.JPG");
+  background-size: cover;
+
+  /*透過の設定*/
+  opacity: 0.7;
+}
+
+.top_message {
+  width: 100%;
+  height: 100;
+  font-weight: bold;
+  text-align: center;
+  /*位置の設定 - 上下中央寄せ*/
+  position: absolute;
+  margin: auto;
+  top: 20px;
+  bottom: 0;
+  font-size: 1.5rem;
+  
 }
