--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -1,16 +1,28 @@
-<h3>以下の内容で、送信する。</h3>
+<div class="container">
+  <div class="confirm_wrapper"></div>
+    <h4>この内容で投稿しますか？</h4>
+      <div class="confirm_form">
+        <%= form_with(model: @blog, url: blogs_path, local: true) do |form| %>
+          <%= form.hidden_field :title %>
+          <%= form.hidden_field :content %>
+          
+          <div class="blog_title">
+            <p>Title</p>
+            <%= @blog.title %>
+          </div>
+          <div class="blog_content">
+            <p>Content</p>
+            <%= @blog.content %>
+          </div>
+          <br>
+          <%= form.submit "Post" %>
+        <% end %>
 
-<%= form_with(model: @blog, url: blogs_path, local: true) do |form| %>
-  <%= form.hidden_field :title %>
-  <%= form.hidden_field :content %>
-  
-  <p>タイトル:<%= @blog.title %></p>
-  <p>本文:<%= @blog.content %></p>
-  <%= form.submit "登録する" %>
-<% end %>
-
-<%= form_with(model: @blog, url: new_blog_path, local: true, method: 'get') do |form| %>
-  <%= form.hidden_field :title %>
-  <%= form.hidden_field :content %>
-  <%= form.submit "戻る", name: 'back' %>
-<% end %>
+        <%= form_with(model: @blog, url: new_blog_path, local: true, method: 'get') do |form| %>
+          <%= form.hidden_field :title %>
+          <%= form.hidden_field :content %>
+          <%= form.submit "Back", name: 'back' %>
+        <% end %>
+      </div>
+  </div>
+</div>
