ログインシステムを追加した

--- a/app/views/blogs/top.html.erb
+++ b/app/views/blogs/top.html.erb
@@ -7,3 +7,11 @@
     </div>
 	</div>
 </div>
+
+
+<%# <div class="container">
+  <div class="top_message">
+    <h1>My blog</h1>
+    <h4>日々の出来事を140文字以内で綴ります。</h4>
+  </div>
+</div> %>
