--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,7 +1,8 @@
 html {
 	font-size: 62.5%;
 	position: relative;
-	min-height: 100%;
+  min-height: 100%;
+  // height: 100%;
 }
 
 body {
@@ -99,6 +100,8 @@ div.container {
   text-align: left;
   position: relative;
 
+  // background-image: image-url("caffe.JPG");
+  // background-size: cover;
 }
 
 .back_transparent {
@@ -107,12 +110,12 @@ div.container {
   width: 100%;
   position: absolute;
   top: 0;
-  left: 0;
+ /*透過の設定*/
+  opacity: 0.7;
+   left: 0;
   background-image: image-url("caffe.JPG");
   background-size: cover;
 
-  /*透過の設定*/
-  opacity: 0.7;
 }
 
 .top_message {
@@ -126,5 +129,11 @@ div.container {
   top: 20px;
   bottom: 0;
   font-size: 1.5rem;
-}
 
+  // height: 100%;
+  // background: rgba(255, 255, 255, 0.4);
+  // background-image: image-url("caffe.JPG");
+  // background-size: cover;
+  // background-position: center;
+
+}
