--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,16 @@
       </nav>
     </header>
 
+
+    <%# <div class="container"> %>
+
+    <div class ="flash">
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
+
+    </div>
+    
     <%= yield %>
 
     <footer class="footer">
