ログインシステムを修正した

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -138,6 +138,20 @@ div.container {
 
 }
 
-.flash {
-  margin-top: 100px;
+.sessions {
+  margin-top: 90px;
+}
+
+.danger {
+  margin-top: 90px;
+  margin-bottom: -70px;
+}
+
+.users {
+  margin-top: 90px;
+}
+
+.success {
+  margin-top: 90px;
+  margin-bottom: -70px;
 }
