ログアウト機能を追加した

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -138,7 +138,11 @@ div.container {
 
 }
 
-.sessions {
+.log_in {
+  margin-top: 90px;
+}
+
+.profile {
   margin-top: 90px;
 }
 
@@ -147,11 +151,16 @@ div.container {
   margin-bottom: -70px;
 }
 
-.users {
-  margin-top: 90px;
-}
-
 .success {
   margin-top: 90px;
   margin-bottom: -70px;
+}
+
+.notice {
+  margin-top: 90px;
+  margin-bottom: -70px;
+}
+ 
+.sign_up {
+  margin-top: 90px;
 }
