--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,17 @@
               <li><a href="/blogs/top">Top</a></li>
               <li><a href="/blogs">Blog list</a></li>
               <li><a href="/blogs/new">Create new</a></li>
+
+
+              <% if logged_in? %>
+                <li><%= link_to "Profile", user_path(current_user.id) %></li>
+                <li><%= link_to "Logout", session_path(current_user.id), method: :delete %></li>
+              <% else %>
+                <li><%= link_to "Sign up", new_user_path %></li>
+                <li><%= link_to "Login", new_session_path %></li>
+              <% end %>
+
+
             </ul>
           </div>
         </div>
@@ -49,6 +60,8 @@
         <%= content_tag(:div, value, class: "#{key}") %>
       <% end %>
       
+      
+
     <%= yield %>
 
     <footer class="footer">
