login_check メソッドを定義し、未ログイン時のアクションに制約をつけた

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -10,15 +10,15 @@ textarea {
 }
 
 
-input[type="text"] {
-  padding: 15px 5px 15px 15px;
-  margin-bottom: 30px;
-  width: 250px;
-  height: 30px;;
-  line-height: 1.5;
-//   border-color: #e6ecf0;
-  resize: none;
-  font-size: 2rem;
-}
+// input[type="text"] {
+//   padding: 15px 5px 15px 15px;
+//   margin-bottom: 30px;
+//   width: 250px;
+//   height: 30px;;
+//   line-height: 1.5;
+// //   border-color: #e6ecf0;
+//   resize: none;
+//   font-size: 2rem;
+// }
 
 
