--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -160,6 +160,11 @@ div.container {
   margin-top: 90px;
   margin-bottom: -70px;
 }
+
+.alert {
+  margin-top: 90px;
+  margin-bottom: -70px;
+}
  
 .sign_up {
   margin-top: 90px;
