--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,8 @@
   
   <% if @user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this @user from being saved:</h2>
+      <!--<h2><%= pluralize(@user.errors.count, "error") %> prohibited this @user from being saved:</h2>-->
+      <h4><%= (@user.errors.count) %>件のエラーがあります。</h4>
       <ul>
       <% @user.errors.full_messages.each do |message| %>
         <li><%= message %></li>
