--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,7 +1,8 @@
 <h1>ブログ詳細画面</h1>
   <p>タイトル: <%= @blog.title %></p>
   <p>内容: <%= @blog.content %></p>
-  
+  <p>投稿者: <%= @user.name %></p>
+
   <br>
   
   <div class="btn-group" role="group" aria-label="...">
