多対多のアソシエーションを使い、お気に入り機能を追加した

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -31,3 +31,13 @@ td {
 	padding: 15px;
 	margin-bottom:10px;
 }
+
+.user_name {
+	display: inline-block;
+	margin-right: 10px;
+}
+
+.date {
+	display: inline-block;
+	margin-left: 10px;
+}
