--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,10 +1,36 @@
 <h1>ブログ詳細画面</h1>
-  <p>タイトル: <%= @blog.title %></p>
-  <p>内容: <%= @blog.content %></p>
-  <p>投稿者: <%= @user.name %></p>
+  <div>
+    <p>タイトル: <%= @blog.title %></p>
+    <p>内容: <%= @blog.content %></p>
+    <p>投稿者: <%= @user.name %></p>
+  </div>
 
-  <br>
-  
-  <div class="btn-group" role="group" aria-label="...">
+<div>
+  <% if @blog.user_id == current_user.id %>
+    <div class="btn-group" role="group" aria-label="...">
+      <div class="delete_button">
+        <button type="button" class="btn btn-default"><%= link_to 'delete', blog_path(@blog.id), method: :delete, 
+          data: { confirm: '本当に削除していいですか？'} %></button>
+      </div>
+      <div class="edit_button">
+        <button type="button" class="btn btn-default"><%= link_to "edit", edit_blog_path(@blog.id), 
+          data: { confirm: '本当に編集していいですか？'} %></button>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+
+<div>
+  <% unless @blog.user_id == current_user.id %>
+    <% if @favorite.present? %>
+      <%= link_to 'お気に入り解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
+    <% else %>
+      <%= link_to 'お気に入りする', favorites_path(blog_id: @blog.id), method: :post, class: 'btn btn-primary' %>
+    <% end %>
+  <% end %>
+</div>
+
+  <div role="group" aria-label="...">
     <button type="button" class="btn btn-default"><%= link_to "Back", blogs_path %></button>
   </div>
