--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -16,10 +16,15 @@
             <%= blog.content %>
           </div>
           <div>
-            
-            <%= blog.created_at.strftime("%Y-%m-%d %H:%M ") %>
+            <div class="user_name">
+              <%= blog.user.name %>
+            </div>
+            <div class="date">
+              <%= blog.created_at.strftime("%Y-%m-%d %H:%M ") %>
+            </div>
           </div>
-          <div class="btn-group" role="group" aria-label="...">
+          
+          <!-- <div class="btn-group" role="group" aria-label="...">
             <div class="delete_button">
               <button type="button" class="btn btn-default"><%= link_to 'delete', blog_path(blog.id), method: :delete, 
                 data: { confirm: '本当に削除していいですか？'} %></button>
@@ -28,7 +33,8 @@
               <button type="button" class="btn btn-default"><%= link_to "edit", edit_blog_path(blog.id), 
                 data: { confirm: '本当に編集していいですか？'} %></button>
             </div>
-          </div>
+          </div> -->
+
         </div>
         </div>
       <% end %>
