お気に入り機能を修正した

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -9,6 +9,13 @@ textarea {
     font-size: 2rem;
 }
 
+.blog_title {
+  font-size: 150%
+}
+
+.blog_content {
+  font-size: 150%;
+}
 
 // input[type="text"] {
 //   padding: 15px 5px 15px 15px;
