--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,41 @@
-<div class="profile">
+<div class="container">
 
-<%# <div class="container"> %>
+  <div class="profile">
 
-  <h1><%= @user.name %>のページ</h1>
+    <h1><%= @user.name %>のページ</h1>
 
-  <p>メールアドレス: <%= @user.email %></p>
+    <p>メールアドレス: <%= @user.email %></p>
 
-  <p>お気に入りリスト<p>
-    <%= @favorites_blogs. each do |favorites_blog| %>
-      <div>
-      <%= favorites_blog.title%>
+    <h3>Favorite Lists</h3>
+
+    <div class="content">
+      <div class="row">
+        <% @favorites_blogs. each do |favorites_blog| %>
+          <div class="col-md-6">
+            <div class="post">
+              <div class="profile_blog_title">
+              <%= favorites_blog.title %>
+              </div>
+              <div class="blog_content">
+              <%= favorites_blog.content %>
+              </div>
+              <div class="user_name">
+              <%= favorites_blog.user.name %>
+              </div>
+              <div class="date">
+              <%= favorites_blog.created_at.strftime("%Y-%m-%d %H:%M ") %>
+              </div>
+
+              <!-- <div>
+                  <%= link_to 'Favorite Cancel', favorite_path(id: favorites_blog.id), method: :delete, class: 'btn btn-danger' %>
+              </div> -->
+
+            </div>
+          </div>
+        <% end %>
       </div>
-      <div>
-      <%= favorites_blog.content %>
-      </div>
-      <div>
-      <%= favorites_blog.user.name %>
-      </div>
-      <div>
-      <%= favorites_blog.created_at.strftime("%Y-%m-%d %H:%M ") %>
-      </div>
+    </div>
 
-    <% end %>
-
+  </div>
 
 </div>
