--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -20,17 +20,16 @@
   <% end %>
 </div>
 
-
 <div>
   <% unless @blog.user_id == current_user.id %>
     <% if @favorite.present? %>
-      <%= link_to 'お気に入り解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
+      <%= link_to 'Favorite Cancel', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
     <% else %>
-      <%= link_to 'お気に入りする', favorites_path(blog_id: @blog.id), method: :post, class: 'btn btn-primary' %>
+      <%= link_to 'Favorite', favorites_path(blog_id: @blog.id), method: :post, class: 'btn btn-primary' %>
     <% end %>
   <% end %>
 </div>
-
+<br>
   <div role="group" aria-label="...">
     <button type="button" class="btn btn-default"><%= link_to "Back", blogs_path %></button>
   </div>
