ActionMailerを使用して、メール送信機能を実装した

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -32,14 +32,14 @@ td {
 	margin-bottom:10px;
 }
 
-.profile_blog_title {
+.blog_title {
 	font-size: 150%;
 	color: #6091d3;
 }
 
 .blog_content {
 	font-size: 130%;
-	// text-align: left;
+	text-align: left;
 }
 
 .user_name {
