--- a/app/assets/stylesheets/confirm.scss
+++ b/app/assets/stylesheets/confirm.scss
@@ -15,3 +15,17 @@
   // word-wrap: b
   overflow: scroll;
 }
+
+.confirm_title_label {
+  font-size: 120%;
+}
+
+.confirm_content_label {
+  font-size: 120%;
+}
+
+// .confirm_content {
+//   margin-left: 20%;
+// 	margin-right: 320%;
+// 	text-align: left;
+// }
