--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,3 +1,8 @@
+.form_text_field {
+	padding: 3px;
+	width: 280px;
+}
+
 textarea {
     margin: 0px;
     padding: 15px 5px 15px 15px;
@@ -9,23 +14,23 @@ textarea {
     font-size: 2rem;
 }
 
-.blog_title {
-  font-size: 150%
+// .form_submit {
+// 	text-align: center;
+// }
+
+.form_title_label {
+	font-size: 150%;
 }
 
-.blog_content {
-  font-size: 150%;
+.form_content_label {
+	font-size: 150%;
 }
 
-// input[type="text"] {
-//   padding: 15px 5px 15px 15px;
-//   margin-bottom: 30px;
-//   width: 250px;
-//   height: 30px;;
-//   line-height: 1.5;
-// //   border-color: #e6ecf0;
-//   resize: none;
-//   font-size: 2rem;
+// .post_content {
+// 	margin-left: 35%;
+// 	margin-right: 35%;
+// 	text-align: left;
+// 	// margin: 0 auto;
 // }
 
 
