トップ画面を表示させるtops_controllerを作成、ルーティングを修正した

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,11 +32,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/blogs/top">My blog</a>
+            <a class="navbar-brand" href="/tops/">My blog</a>
           </div>
           <div id="gnavi" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="/blogs/top">Top</a></li>
+              <li><a href="/tops/">Top</a></li>
               <li><a href="/blogs">Blog list</a></li>
 
               <% if logged_in? %>
