--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -24,6 +24,13 @@
           <div><%= form.label :content, class:"form_content_label" %></div>
           <div><%= form.text_area :content, placeholder: "Today's event" %></div>
         </div>
+        <div>
+          <div><%= form.label :image %></div>
+          <!-- 確認画面から新規作成画面に戻った時に、 -->
+          <!-- アップロードした画像を表示させるための記述 -->
+          <div><%= image_tag(@blog.image.url) if @blog.image.url %></div>
+          <div><%= form.file_field :image %></div>
+        </div>
         <%= form.submit %>
         <% end %>
       </div>
