userテーブルにiconカラムを追加した

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,7 +3,7 @@
     <p>title: <%= @blog.title %></p>
     <p>content: <%= @blog.content %></p>
     <p>contributor: <%= @user.name %></p>
-    <p>image: <%= image_tag @blog.image.url %></p>
+    <p><%= image_tag @blog.image.url %></p>
   </div>
 
 <div>
