--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -35,6 +35,11 @@
       <%= f.password_field :password_confirmation %>
     </div>
 
+    <div>
+      <%= f.label :image %>
+      <%= f.file_field :image %>
+    </div>
+
     <%= f.submit "Create my account" %>
   <% end %>
 
