--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -26,6 +26,10 @@ textarea {
 	font-size: 150%;
 }
 
+.image_file {
+    margin: 0 auto;
+}
+
 // .post_content {
 // 	margin-left: 35%;
 // 	margin-right: 35%;
