--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -5,9 +5,6 @@
         <%= form_with(model: @blog, url: blogs_path, local: true) do |form| %>
           <%= form.hidden_field :title %>
           <%= form.hidden_field :content %>
-          <!-- 確認画面でアップロードした画像を表示させるための記述 -->
-          <%= image_tag(@blog.image.url) %>
-          <%= form.hidden_field :image_cache %>
           
           <div class="confirm_content">
             <div >
@@ -19,15 +16,20 @@
               <p class="confirm_content_label">Content</p>
               <%= @blog.content %>
             </div>
+
+            <!-- 確認画面でアップロードした画像を表示させるための記述 -->
+            <%= image_tag(@blog.image.url) %>
+            <%= form.hidden_field :image_cache %>
+
           </div>
-          <%= form.submit "Post" %>
+          <%= form.submit "Post", class: "btn btn-default" %>
         <% end %>
 
         <%= form_with(model: @blog, url: new_blog_path, local: true, method: 'get') do |form| %>
           <%= form.hidden_field :title %>
           <%= form.hidden_field :content %>
           <%= form.hidden_field :image_cache %>
-          <%= form.submit "Back", name: 'back' %>
+          <%= form.submit "Back", name: 'back', class: "btn btn-default" %>
         <% end %>
       </div>
   </div>
