--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -45,7 +45,7 @@
       <%= f.file_field :icon, class:"image_file" %>
     </div>
 
-    <%= f.submit "Create my account" %>
+    <%= f.submit "Create my account", class: "btn btn-default" %>
   <% end %>
 
 </div>
